[tool.poetry]
name = "gpt-examples"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpt_examples"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.6"
orjson = "^3.8.12"
httpx = "^0.24.0"
click = "^8.1.3"
typer = "^0.9.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
